# hyperweave

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  fly.toml  justfile  pyproject.toml
docs/: introduction.mdx  quickstart.mdx
docs/explanation/: architecture.mdx  camo-compatibility.mdx  cim-compliance.mdx  genome-profile-system.mdx  metadata-tiers.mdx
docs/how-to/: add-motion-to-badges.mdx  set-up-claude-code-hooks.mdx  use-live-data-badges.mdx
docs/reference/: cli.mdx  genomes.mdx  http-api.mdx  mcp-tools.mdx  motions.mdx
docs/spec/: hyperweave-protocol.mdx
docs/tutorials/: build-an-artifact-kit.mdx  compose-your-first-badge.mdx  install-session-telemetry.mdx
scripts/: extract_font_metrics.py  generate_proofset.py  proofset_harness.py
src/hyperweave/: cli.py
src/hyperweave/compose/: assembler.py  bar_chart.py  chart_layout.py  context.py  lanes.py  layout.py  resolver.py  spatial_records.py  stats_layout.py  treemap.py
src/hyperweave/compose/resolvers/: chart.py  stats.py
src/hyperweave/config/: loader.py
src/hyperweave/connectors/: __init__.py  arxiv.py  base.py  cache.py  dora.py  github.py  rest.py  scorecard.py
src/hyperweave/core/: enums.py  font_metrics.py  models.py  paradigm.py  schema.py  text.py
src/hyperweave/data/: font-embedding.yaml  marquee_classes.yaml
src/hyperweave/data/font-metrics/: barlow-condensed-900.json  chakra-petch.json  inter.json  jetbrains-mono.json  orbitron.json
src/hyperweave/data/fonts/: inter.b64  inter.meta.json
src/hyperweave/data/genomes/: brutalist.json  chrome.json  telemetry-voltage.json
src/hyperweave/data/paradigms/: brutalist.yaml  cellular.yaml  chrome.yaml
src/hyperweave/data/telemetry/runtimes/: antigravity.yaml
src/hyperweave/mcp/: server.py
src/hyperweave/render/: chart_engine.py  glyph_metrics.py  motion.py
src/hyperweave/serve/: app.py  data_tokens.py
src/hyperweave/templates/: error-badge.svg.j2
src/hyperweave/templates/components/: chart-milestone-brutalist.svg.j2  chart-milestone.svg.j2  filter.svg.j2  glyph-inline.svg.j2  glyph.svg.j2  metadata.svg.j2  metric.svg.j2  phase-segment.svg.j2  rule.svg.j2  status.svg.j2
src/hyperweave/templates/components/chart-markers/: diamond.svg.j2  endpoint-diamond.svg.j2  endpoint-rect.svg.j2  rect.svg.j2
src/hyperweave/templates/frames/: badge.svg.j2  catalog.svg.j2  divider.svg.j2  icon.svg.j2  marquee-horizontal.svg.j2  receipt.svg.j2  rhythm-strip.svg.j2  strip.svg.j2
src/hyperweave/templates/frames/badge/: brutalist-dark-content.j2  brutalist-light-content.j2  cellular-content.j2  cellular-defs.j2  chrome-content.j2  chrome-defs.j2
src/hyperweave/templates/frames/chart/: brutalist-dark-content.j2  brutalist-defs.j2  brutalist-light-content.j2  cellular-content.j2  cellular-defs.j2  chrome-content.j2  chrome-defs.j2
src/hyperweave/templates/frames/divider/: brutalist-seam.svg.j2  chrome-band.svg.j2
src/hyperweave/templates/frames/icon/: brutalist-content.j2  cellular-content.j2  chrome-content.j2  chrome-defs.j2
src/hyperweave/templates/partials/: provider-glyphs.svg.j2
tests/: test_algorithmic_geometry.py  test_assembler.py  test_badge_brutalist_dark.py  test_badge_cellular.py  test_badge_layout.py  test_chart_engine.py  test_connectors.py  test_data_tokens.py  test_font_gating.py  test_font_metrics_chakra.py  test_font_metrics_inter.py  test_glyph_metrics.py  test_marquee_v0_2_16.py  test_marquee_v0_3_12.py  test_mcp.py  test_paradigm_cellular.py  test_proofset.py  test_receipt_token_compliance.py  test_render.py  test_serve_font_csp.py  test_spatial_stencils.py  test_strip_brutalist_grammar.py  test_strip_invariance.py  test_telemetry_contract_per_stage.py  test_telemetry_skin_dispatch.py
tests/compose/: test_policy_lanes.py
tests/fixtures/: proofset_data.json
tests/integration/: test_install_hook.py  test_telemetry_skin_dispatch.py
tests/mcp/: test_mcp.py
tests/serve/: test_serve.py
tests/telemetry/: test_runtime_registries.py
(+31 files in other folders)
