[project]
name = "hyperweave"
dynamic = ["version"]
description = "Headless visual output layer for AI agents. One API call → self-contained SVG."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "InnerAura Labs" }]
readme = "README.md"
keywords = [
    "svg",
    "svg-generation",
    "design-system",
    "ai-agents",
    "generative-ui",
    "mcp-server",
    "mcp",
    "developer-tools",
    "fastapi",
    "claude-code",
    "badges",
    "github-profile",
    "profile-readme",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
# Core install (CLI + render engine). The compose / render / connector modules
# import none of fastapi / uvicorn / fastmcp — those live behind the optional
# extras below so `pip install hyperweave` stays lean for the badge/render use
# case. The HTTP server and MCP server are opt-in (`[serve]` / `[mcp]`).
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.15",
    "jinja2>=3.1",
    "httpx[http2]>=0.28",
    "pyyaml>=6.0",
    # Font subsetting (v0.3.7). Runtime — not dev-only — because
    # render/fonts.py imports fontTools at module top-level, which
    # executes on every receipt render. brotli is the WOFF2 codec
    # fontTools uses inside font.save(flavor="woff2") and must be
    # importable on every install (uv tool install, pip install, etc.).
    "fonttools>=4.62.1",
    "brotli>=1.2.0",
]

[project.optional-dependencies]
# HTTP server (`hyperweave serve`). serve/app.py is the only fastapi user.
serve = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
# MCP server (`hyperweave mcp`, stdio). mcp/server.py is the only fastmcp user.
mcp = ["fastmcp>=3.0"]
# Convenience: both servers.
all = ["hyperweave[serve,mcp]"]

[project.urls]
Homepage = "https://hyperweave.app"
Documentation = "https://hyperweave.app/docs"
Repository = "https://github.com/InnerAura/hyperweave"
Issues = "https://github.com/InnerAura/hyperweave/issues"
Discord = "https://discord.gg/wVmcAZPQZ8"

[project.scripts]
hyperweave = "hyperweave.cli:app"
hw = "hyperweave.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hyperweave/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperweave"]

[dependency-groups]
dev = [
    # Runtime server extras — kept OUT of the core install (pyproject
    # [serve]/[mcp]) but installed for dev/CI so the full suite can test
    # serve/app.py + mcp/server.py via `uv run pytest`.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "fastmcp>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-pretty>=1.2",
    "pytest-randomly>=3.16",
    "pytest-sugar>=1.0",
    "pytest-xdist>=3.5",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-pyyaml>=6.0.12.20250915",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "--strict-config", "-ra"]
markers = [
    "slow: marks tests as slow",
    "snapshot: visual regression",
    "live: network access (deselect with '-m \"not live\"')",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]
extend-exclude = ["tier2"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
